Make pages collapse to hamburger-style sidebar at 768px rather than 480px, other styling fixes

--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -39,16 +39,26 @@
 }
 
 body {
+  margin: 0;
+  padding: 0;
   background: var(--color-primary);
   color: var(--text-color);
 }
 
-/* ===== SIDEBAR NAVIGATION ===== */
-
-.black-background {
-  background: black;
-  width: 30vw;
+body::-webkit-scrollbar {
+  width: 15px; /* width of the entire scrollbar */
 }
+
+body::-webkit-scrollbar-track {
+  background: none; /* color of the tracking area */
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #555; /* color of the scroll thumb */
+  border: 1px solid black; /* creates padding around scroll thumb */
+}
+
+/* ===== SIDEBAR NAVIGATION ===== */
 
 .sidebar {
   top: 0;
@@ -61,15 +71,11 @@ body {
 }
 
 .sidebar-toggle {
-  position: fixed;
-  top: 0;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 40px;
-  height: 30px;
-  padding: 10px;
   display: none;
+  position: absolute;
   z-index: 50;
+  top: 15px;
+  left: 15px;
 }
 
 .menu-bar {
@@ -77,7 +83,6 @@ body {
   flex-direction: column;
   padding-top: 10px;
   width: 100%;
-  height: 100%;
   overflow-x: auto;
   overflow-y: hidden;
 }
@@ -99,13 +104,11 @@ body {
 }
 
 .nav-link:hover {
-  background: var(--sidebar-transition-color);
+  text-decoration: none;
 }
 
-.nav-link:hover .nav-icon,
-.nav-link:hover .nav-text {
-  color: var(--text-color);
-  font-family: var(--font-primary);
+.nav-link:hover {
+  background: var(--sidebar-transition-color);
 }
 
 .nav-icon {
@@ -113,7 +116,13 @@ body {
   width: 40px;
   justify-content: center;
   font-size: 20px;
-  margin: 0px 20px 0px 10px;
+  margin: 0px 15px;
+}
+
+#home-icon {
+  margin: 0 12.5px;
+  height: 50px;
+  width: 50px;
 }
 
 .nav-text {
@@ -138,7 +147,6 @@ body {
 .contact-info-container {
   max-width: 100%;
   white-space: wrap;
-  height: 100%;
   padding-top: 20px;
   overflow-x: auto;
 }
@@ -157,24 +165,24 @@ body {
   color: var(--sidebar-text-color);
 }
 
-@media (max-width: 480px) {
+@media (max-width: 768px) {
   .sidebar {
+    display: none;
     position: fixed;
-    background: none;
     width: 50vw;
-  }
-  .sidebar-content {
-    text-overflow: ellipsis;
     flex-direction: column;
     align-items: flex-start;
-    display: none;
     background: black;
-    height: 100%;
-    //   padding-top: 40px;
+    padding-top: 35px;
+    z-index: 50;
   }
   .sidebar-toggle {
     display: block;
+    z-index: 50;
     position: fixed;
+  }
+  .right-panel {
+    display: none;
   }
 }
 
@@ -293,21 +301,22 @@ body {
   color: #e1dede;
   font-family: var(--font-primary);
 }
-@media (max-width: 768px) {
-  // .home-resources {
-  //   flex-wrap: wrap;
-  // }
-}
 
 @media (max-width: 480px) {
   #home-page-container {
-    padding: 10px 50px;
+    padding: 10px 20px;
   }
   .home-quick-links-container {
     gap: 8px;
   }
-  .right-panel {
-    display: none;
+}
+@media (max-width: 768px) {
+  #home-page-grid {
+    grid-template-columns: 0fr 1fr 0fr;
+  }
+  #welcome-message {
+    padding: 20px 20px;
+    text-align: center;
   }
 }
 
@@ -315,7 +324,6 @@ body {
   .page-container {
     margin-left: 0px;
     padding-left: 0px;
-    z-index: -1;
   }
   .banner-text-header {
     font-size: 25px;
@@ -327,40 +335,27 @@ body {
   .banner-text-footer {
     font-size: 12px;
   }
-  #home-page-grid {
-    display: grid;
-    grid-template-columns: 0fr 1fr 0fr;
-  }
   .home-page-container {
     /* top | right | bottom | left */
     margin: 0px 0px 30px 0px;
-    margin: 0;
     padding-top: 50px;
   }
   .welcome-message {
     text-align: center;
     font-size: 30px;
-    padding: 30px 50px 10px 50px;
+    padding: 250px 0px 100px 30px; /* top | right | bottom | left */
   }
   .home-time {
     text-align: center;
     padding: 10px;
   }
   .course-description-container {
-    padding: 30px 0px 0px 0px;
+    padding: 0;
     width: 100%;
   }
   .course-description-text {
     font-size: 15px;
     padding: 10px 30px;
-  }
-  .home-quick-links-container {
-    padding: 0px 0px 0px 0px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
   }
   .home-quick-links-element {
     padding: 0px;
@@ -371,19 +366,6 @@ body {
     font-size: 20px;
     padding: 0px 10px;
   }
-  .home-calendars-container {
-    padding: 0px 0px 0px 0px;
-    margin: 0px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  .home-calendar {
-    width: 100%;
-  }
-}
-
-@media (max-width: 768px) {
   .home-calendars-container {
     padding: 0px 0px 0px 0px;
     margin: 0px;
@@ -444,7 +426,7 @@ body {
 .banner-content-layout {
   display: grid;
   width: 100%;
-  grid-template-columns: 20% 80%;
+  grid-template-columns: 15% 85%;
 }
 
 .page-container {
@@ -465,12 +447,6 @@ body {
 }
 @media only screen and (max-width: 768px) {
   .banner-content-layout {
-    grid-template-columns: 30% 70%;
-  }
-}
-
-@media only screen and (max-width: 480px) {
-  .banner-content-layout {
     grid-template-columns: 0% 100%;
   }
 }
@@ -478,6 +454,8 @@ body {
 /* ===== RIGHT PANEL ===== */
 
 .right-panel {
+  padding-left: 10px;
+  height: 100%;
 }
 
 .lecture-info-container {
@@ -803,7 +781,6 @@ table {
 .backbox {
   display: flex;
   flex-direction: column;
-  //justify-content: center;
   position: relative;
   background-color: #474040;
   padding: 10px;
